--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -51,4 +51,12 @@
     color: white;
 }
 
+.logoutBtn{
+    border: none;
+    background-color: transparent;
+    color: white;
+    margin-top: 17px;
+    font-size: 17px;
+}
+
 
