--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -74,6 +74,12 @@ p{
     margin: 18px 0px 0px 5px;
 }
 
+.truePic{
+    position: block;
+    width: 100%;
+    height: 100%; 
+}
+
 .userInfoBox{
     border: 2px solid white;
     width: 350px;
