--- a/src/Components/Search_View/Search_View.css
+++ b/src/Components/Search_View/Search_View.css
@@ -1,4 +1,17 @@
 
+.NewgrayBackGround{
+    min-width: 100%;
+    max-height: 100%;
+    background-color: rgb(242, 242, 242);
+}
+
+.pagination{
+    width: 500px;
+    height: 50px;
+    background-image:  linear-gradient(97deg, #ff7a6e, #ff9770);
+    margin: auto;
+}
+
 .resetBtn{
     width: 100px;
     height: 30px;
@@ -16,6 +29,7 @@
     margin-top: 20px;
     background-color: white;
     border: 2px solid white;
+    overflow: auto;
 
 }
 
@@ -40,4 +54,21 @@
 
 .searchInput{
     margin: 0px 0px 0px 10px;
+}
+
+.searchResults{
+        border: 2px solid black;
+        margin: auto;
+        margin-top: 30px;
+        width: 700px;
+        padding: 10px;
+        /* min-height: 65vh; */
+        max-height: auto;
+        margin-bottom: 10px;
+        overflow: auto;
+        display: flex;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        height: auto;
+        align-content: flex-start;
 }
