--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -1,6 +1,15 @@
+.Remove.Friend {
+    height: 30px;
+    width: 100px;
+    color: white;
+    border-radius: 2px;
+    background-color: rgb(53, 53, 53);
+    border: none;
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1), 0 1px 2px 0 rgba(0,0,0,0.2);
+    font-size: 10px;
+}
 
-.addFriendBtn{
-
+.Add.Friend {
     border-radius: 1px;
     background-image: radial-gradient(circle at 50%-46%, #ff9770, #ff7a6e);
     box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1), 0 1px 2px 0 rgba(0,0,0,0.1), 0 1px 2px 0 rgba(0,0,0,0.2);
@@ -132,8 +141,7 @@ p{
     max-height: 101px;
     width: 330px;
     border: 1px solid white;
-    margin-left: 10px;
-    margin: 10px 7px 10px 0px;
+    margin: 10px 7px 10px 8px;
     box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1), 0 1px 2px 0 rgba(0,0,0,0.1), 0 1px 2px 0 rgba(0,0,0,0.2);
     
 }
