--- a/src/Components/Search_View/Search_View.css
+++ b/src/Components/Search_View/Search_View.css
@@ -57,7 +57,7 @@
 }
 
 .searchResults{
-        border: 2px solid black;
+        /* border: 2px solid black; */
         margin: auto;
         margin-top: 30px;
         width: 700px;
