--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -1,6 +1,6 @@
-.Remove.Friend {
+.RemoveFriend {
     height: 30px;
-    width: 100px;
+    width: 73px;
     color: white;
     border-radius: 2px;
     background-color: rgb(53, 53, 53);
@@ -9,7 +9,7 @@
     font-size: 10px;
 }
 
-.Add.Friend {
+.AddFriend {
     border-radius: 1px;
     background-image: radial-gradient(circle at 50%-46%, #ff9770, #ff7a6e);
     box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1), 0 1px 2px 0 rgba(0,0,0,0.1), 0 1px 2px 0 rgba(0,0,0,0.2);
@@ -23,8 +23,6 @@
     width: 750px;
     margin: auto;
     margin-top: 20px;
-    
-
 }
 
 .btnBox{
