--- a/src/Components/Search_View/Search_View.css
+++ b/src/Components/Search_View/Search_View.css
@@ -1,8 +1,26 @@
 
+
+
+.bottom{
+    height: 20px;
+}
+
 .NewgrayBackGround{
     min-width: 100%;
     max-height: 100%;
     background-color: rgb(242, 242, 242);
+}
+
+.pageBtn {
+    height: 30px;
+    width: 50px;
+    color: white;
+    border-radius: 2px;
+    background-color: rgb(53, 53, 53);
+    border: none;
+    -webkit-box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1), 0 1px 2px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1), 0 1px 2px 0 rgba(0,0,0,0.2);
+    margin: 10px 20px 0px 10px;
 }
 
 .pagination{
