--- a/src/Components/Search_View/Search_View.css
+++ b/src/Components/Search_View/Search_View.css
@@ -1,8 +1,18 @@
 
-
+.allPageBtns{
+    /* border: 2px solid black; */
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    margin: 12px 0px 0px 0px;
+}
 
 .bottom{
     height: 20px;
+}
+
+.littleBtns{
+    margin-left: 5px;
 }
 
 .NewgrayBackGround{
@@ -20,7 +30,7 @@
     border: none;
     -webkit-box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1), 0 1px 2px 0 rgba(0,0,0,0.2);
     box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1), 0 1px 2px 0 rgba(0,0,0,0.2);
-    margin: 10px 20px 0px 10px;
+    margin: 7px 20px 0px 120px;
 }
 
 .pagination{
@@ -28,6 +38,10 @@
     height: 50px;
     background-image:  linear-gradient(97deg, #ff7a6e, #ff9770);
     margin: auto;
+    padding-bottom: 7px;
+    display: flex;
+    flex-direction: row;
+    height: 100%;
 }
 
 .resetBtn{
